--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "essay-ecs"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2021"
 publish=false
 
@@ -8,7 +8,7 @@ publish=false
 #name = "essaymind"
 # crate-type = ["rlib", "cdylib"]
 #crate-type = ["cdylib"]
-crate-type = ["rlib"]
+#crate-type = ["rlib"]
 path = "src/lib.rs"
 
 [dependencies]
