--- a/crates/essay-ecs-app/Cargo.toml
+++ b/crates/essay-ecs-app/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 log = { version = "0.4.17" }
 env_logger = { version = "0.10.0" }
 essay-ecs-core = { path = "../essay-ecs-core" }
+essay-ecs-app-macros = { path = "macros" }
 
 [lib]
 doctest = false
