--- a/crates/essay-ecs-core/Cargo.toml
+++ b/crates/essay-ecs-core/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 log = { version = "0.4.17" }
 fixedbitset = "0.4"
 concurrent-queue = "2.2"
-essay-ecs-macros = { path = "macros", version = "0.1.0" }
+essay-ecs-core-macros = { path = "macros", version = "0.1.0" }
 
 [lib]
 doctest = false
